--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@ layout: landing-page
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h2>Ipsum feugiat consequat</h2>
-					<p>Tempus adipiscing commodo ut aliquam blandit</p>
+                    
+					<h2>Design Awards</h2>
+					<p>2010 | 2011 | 2016</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-area-chart major"></i>
-								<h3>Justo placerat</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-trophy major"></i>
+                                <h3>— 2016 Gold — Financial Communications Society</h3>
+								<p>NIKKEI 225 Direct Mail</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-refresh major"></i>
-								<h3>Blandit quis curae</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-trophy major"></i>
+								<h3>— 2011 Gold — Northwest Arkansas Addy Federation</h3>
+								<p>Swiffer Pallet Skirt</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-cog major"></i>
-								<h3>Amet sed accumsan</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-trophy major"></i>
+								<h3>— 2010 Silver — Northwest Arkansas Addy Federation</h3>
+								<p>Swiffer Table Card</p>
 							</section>
 						</div>
 					</div>
@@ -38,8 +39,8 @@ layout: landing-page
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<header class="major">
-					<h2>Commodo accumsan aliquam</h2>
-					<p>Amet nisi nunc lorem accumsan</p>
+					<h2>Recent Projects</h2>
+					<p>at CME Group</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -73,7 +74,7 @@ layout: landing-page
 					<div class="row">
 						<div class="8u">
 							<section>
-								<h2>Mollis ut adipiscing</h2>
+								<h2>Full Portfolio</h2>
 								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 								<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
 							</section>
